Admin portal: Add latest dates of special platform's jobs

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Abstract\IPlatformAccountRepository.cs" />
     <Compile Include="Abstract\IRevTrackRepository.cs" />
     <Compile Include="Abstract\ISecurityRepository.cs" />
+    <Compile Include="Abstract\ISpecialPlatformRepository.cs" />
     <Compile Include="Abstract\ISuperRepository.cs" />
     <Compile Include="Abstract\ITDRepository.cs" />
     <Compile Include="Abstract\TopCampaignBy.cs" />
@@ -112,6 +113,12 @@
     <Compile Include="Concrete\PlatformAccountRepository.cs" />
     <Compile Include="Concrete\RevTrackRepository.cs" />
     <Compile Include="Concrete\SecurityRepository.cs" />
+    <Compile Include="Concrete\SpecialPlatformRepository.cs" />
+    <Compile Include="SpecialPlatformProviders\Implementation\CommissionJunctionProvider.cs" />
+    <Compile Include="SpecialPlatformProviders\Implementation\DspProvider.cs" />
+    <Compile Include="SpecialPlatformProviders\Implementation\KochavaProvider.cs" />
+    <Compile Include="SpecialPlatformProviders\Contracts\SpecialPlatformProvider.cs" />
+    <Compile Include="SpecialPlatformProviders\Implementation\VcdProvider.cs" />
     <Compile Include="Concrete\SuperRepository.cs" />
     <Compile Include="Concrete\TDRepository.cs" />
     <Compile Include="Contexts\ABContext.cs" />
@@ -126,6 +133,7 @@
     <Compile Include="DTO\ProgClientStats.cs" />
     <Compile Include="DTO\ProgMediaStat.cs" />
     <Compile Include="DTO\RTLineItem.cs" />
+    <Compile Include="DTO\SpecialPlatformSummary.cs" />
     <Compile Include="DTO\TDCampStats.cs" />
     <Compile Include="DTO\TDLineItem.cs" />
     <Compile Include="DTO\TDStat.cs" />
@@ -214,6 +222,7 @@
     <Compile Include="Entities\CPProg\Vendor\SummaryMetrics\VendorCategorySummaryMetric.cs" />
     <Compile Include="Entities\CPProg\Vendor\SummaryMetrics\VendorProductSummaryMetric.cs" />
     <Compile Include="Entities\CPProg\Vendor\SummaryMetrics\VendorSubcategorySummaryMetric.cs" />
+    <Compile Include="Entities\CPProg\Vendor\VcdAnalyticItem.cs" />
     <Compile Include="Entities\CPProg\Vendor\VendorBrand.cs" />
     <Compile Include="Entities\CPProg\Vendor\VendorCategory.cs" />
     <Compile Include="Entities\CPProg\Vendor\VendorParentProduct.cs" />
@@ -640,6 +649,10 @@
     <Compile Include="MigrationsTD\201904021651556_Mig_JobExecution.Designer.cs">
       <DependentUpon>201904021651556_Mig_JobExecution.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201904051148552_Mig_VcdAnalyticTable.cs" />
+    <Compile Include="MigrationsTD\201904051148552_Mig_VcdAnalyticTable.Designer.cs">
+      <DependentUpon>201904051148552_Mig_VcdAnalyticTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -1020,6 +1033,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201904021651556_Mig_JobExecution.resx">
       <DependentUpon>201904021651556_Mig_JobExecution.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201904051148552_Mig_VcdAnalyticTable.resx">
+      <DependentUpon>201904051148552_Mig_VcdAnalyticTable.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
