--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -183,6 +183,18 @@
     <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspOrderMetricValues.cs" />
     <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspCreativeDailyMetricValues.cs" />
     <Compile Include="Entities\CPProg\Base\BaseDailyMetricValues.cs" />
+    <Compile Include="Entities\CPProg\Facebook\AdSet\FbAdSet.cs" />
+    <Compile Include="Entities\CPProg\Facebook\AdSet\FbAdsetAction.cs" />
+    <Compile Include="Entities\CPProg\Facebook\AdSet\FbAdSetSummary.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Ad\FbAd.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Ad\FbAdAction.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Ad\FbAdSummary.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Ad\FbCreative.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Campaign\FbCampaign.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Campaign\FbCampaignAction.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Campaign\FbCampaignSummary.cs" />
+    <Compile Include="Entities\CPProg\Facebook\FbAction.cs" />
+    <Compile Include="Entities\CPProg\Facebook\FbActionType.cs" />
     <Compile Include="Entities\CPProg\Kochava\KochavaItem.cs" />
     <Compile Include="Entities\CPProg\Summaries\AdSetSummary.cs" />
     <Compile Include="Entities\CPProg\SummaryMetrics\AdSetSummaryMetric.cs" />
