--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -68,7 +68,7 @@
     <add key="AmazonReportsBaseFolder" value="C:\Reports\Amazon\Reports" />
     <add key="Amazon_Alt1" value="3697485300977692" /><!-- AvoDerm -->
     <add key="AmazonAuthCode_Alt1" value="ANIxnrbjMDzBPhYGvHwx" /><!-- granted access to brendan's account -->
-    <add key="Amazon_Alt2" value="506658790463709,2809006642760398" /><!-- Carhartt Sportswear - Mens, Carhartt Women's Collection -->
+    <add key="Amazon_Alt2" value="506658790463709,2809006642760398,272960003405959" /><!-- Carhartt Sportswear - Mens, Carhartt Women's Collection, Sourcenext, Inc. -->
     <add key="AmazonAuthCode_Alt2" value="ANKGDfqneQdjIVLXeaKj" /><!-- granted access to amazonaccess@directagents.com account -->
     <add key="Amazon_Alt3" value="3335990284144083" /><!-- Living Fresh (this is not Amazon name) -->
     <add key="AmazonAuthCode_Alt3" value="ANrGlRedanwLmwrxmdCY" /><!-- granted access to livingfresh@directagents.com account -->
