--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -114,6 +114,8 @@
     <Compile Include="Concrete\RevTrackRepository.cs" />
     <Compile Include="Concrete\SecurityRepository.cs" />
     <Compile Include="Concrete\SpecialPlatformRepository.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Daily\FbDailySummary.cs" />
+    <Compile Include="Entities\CPProg\Facebook\FbBaseSummary.cs" />
     <Compile Include="Entities\CPProg\Facebook\FbEntity.cs" />
     <Compile Include="MigrationsTD\201904151116227_FacebookCreativeExpansion.cs" />
     <Compile Include="MigrationsTD\201904151116227_FacebookCreativeExpansion.Designer.cs">
