--- a/3/API/FacebookAPI/FacebookAPI.csproj
+++ b/3/API/FacebookAPI/FacebookAPI.csproj
@@ -44,7 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converters\InsigthsFacebookSummaryConverter.cs" />
+    <Compile Include="Converters\AdInsigthsFacebookSummaryConverter.cs" />
+    <Compile Include="Converters\AdSetInsigthsFacebookSummaryConverter.cs" />
+    <Compile Include="Converters\DailyInsigthsFacebookSummaryConverter.cs" />
+    <Compile Include="Converters\FacebookSummaryConverter.cs" />
+    <Compile Include="Converters\StrategyInsigthsFacebookSummaryConverter.cs" />
+    <Compile Include="Entities\FBAction.cs" />
     <Compile Include="FacebbokAdPreviewDataProvider.cs" />
     <Compile Include="Api\ClientAndParams.cs" />
     <Compile Include="Api\Filter.cs" />
