--- a/3/API/FacebookAPI/FacebookAPI.csproj
+++ b/3/API/FacebookAPI/FacebookAPI.csproj
@@ -34,6 +34,9 @@
     <Reference Include="Facebook">
       <HintPath>..\..\DirectAgents.Web\packages\Facebook.7.0.6\lib\net45\Facebook.dll</HintPath>
     </Reference>
+    <Reference Include="Polly, Version=6.0.0.0, Culture=neutral, PublicKeyToken=c8a3ffc3f8f825cc, processorArchitecture=MSIL">
+      <HintPath>..\..\DirectAgents.Web\packages\Polly.6.1.2\lib\netstandard2.0\Polly.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
