Added parsing creative report.

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -114,17 +114,18 @@
     <Compile Include="Concrete\RevTrackRepository.cs" />
     <Compile Include="Concrete\SecurityRepository.cs" />
     <Compile Include="Concrete\SpecialPlatformRepository.cs" />
-    <Compile Include="Entities\CPProg\DBM\DbmBaseEntity.cs" />
-    <Compile Include="Entities\CPProg\DBM\DbmCampaign.cs" />
-    <Compile Include="Entities\CPProg\DBM\DbmCreative.cs" />
-    <Compile Include="Entities\CPProg\DBM\DbmInsertionOrder.cs" />
-    <Compile Include="Entities\CPProg\DBM\DbmLineItem.cs" />
+    <Compile Include="Entities\CPProg\DBM\Entities\DbmAdvertiser.cs" />
+    <Compile Include="Entities\CPProg\DBM\Entities\DbmBaseEntity.cs" />
+    <Compile Include="Entities\CPProg\DBM\Entities\DbmCampaign.cs" />
+    <Compile Include="Entities\CPProg\DBM\Entities\DbmCreative.cs" />
+    <Compile Include="Entities\CPProg\DBM\Entities\DbmInsertionOrder.cs" />
+    <Compile Include="Entities\CPProg\DBM\Entities\DbmLineItem.cs" />
     <Compile Include="Entities\CPProg\DBM\SummaryMetrics\DbmBaseSummaryEntity.cs" />
     <Compile Include="Entities\CPProg\DBM\SummaryMetrics\DbmCreativeSummary.cs" />
     <Compile Include="Entities\CPProg\DBM\SummaryMetrics\DbmLineItemSummary.cs" />
-    <Compile Include="MigrationsTD\201904191309000_Mig_DbmCreative_Expansion.cs" />
-    <Compile Include="MigrationsTD\201904191309000_Mig_DbmCreative_Expansion.Designer.cs">
-      <DependentUpon>201904191309000_Mig_DbmCreative_Expansion.cs</DependentUpon>
+    <Compile Include="MigrationsTD\201904221419109_Mig_DbmCreativeExpansion.cs" />
+    <Compile Include="MigrationsTD\201904221419109_Mig_DbmCreativeExpansion.Designer.cs">
+      <DependentUpon>201904221419109_Mig_DbmCreativeExpansion.cs</DependentUpon>
     </Compile>
     <Compile Include="SpecialPlatformProviders\Implementation\CommissionJunctionProvider.cs" />
     <Compile Include="SpecialPlatformProviders\Implementation\DspProvider.cs" />
@@ -1042,8 +1043,8 @@
     <EmbeddedResource Include="MigrationsTD\201904021651556_Mig_JobExecution.resx">
       <DependentUpon>201904021651556_Mig_JobExecution.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MigrationsTD\201904191309000_Mig_DbmCreative_Expansion.resx">
-      <DependentUpon>201904191309000_Mig_DbmCreative_Expansion.cs</DependentUpon>
+    <EmbeddedResource Include="MigrationsTD\201904221419109_Mig_DbmCreativeExpansion.resx">
+      <DependentUpon>201904221419109_Mig_DbmCreativeExpansion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
