--- a/3/API/FacebookAPI/FacebookAPI.csproj
+++ b/3/API/FacebookAPI/FacebookAPI.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Api\ClientAndParams.cs" />
     <Compile Include="Api\Filter.cs" />
     <Compile Include="BaseFacebookDataProvider.cs" />
-    <Compile Include="Entities\AdDataEntities\AdData.cs" />
+    <Compile Include="Entities\AdDataEntities\AdCreativeData.cs" />
     <Compile Include="Entities\AdDataEntities\AdSet.cs" />
     <Compile Include="Entities\AdDataEntities\Creative.cs" />
     <Compile Include="Entities\AdDataEntities\Campaign.cs" />
